# rust-data-portal-webapp-backend

./: .gitignore  Cargo.toml  Readme.md
.cargo/: config.toml
certs/: prvkey.pem  pubkey.pem
resources/mail/: email_ro.html
resources/sql/: pgsql_api_app_mthd_get_app_code_list.sql  pgsql_api_app_mthd_get_method_all.sql  pgsql_api_app_mthd_get_method_list_for_app_code.sql  pgsql_api_app_mthd_single_delete_by_id.sql  pgsql_api_app_mthd_single_get_by_id.sql  pgsql_api_app_mthd_single_upsert.sql  pgsql_api_user_auth_get_token.sql  pgsql_api_user_auth_persist_token.sql  pgsql_api_user_authorization_check.sql  pgsql_api_user_get_all.sql  pgsql_api_user_get_auth_transaction_list.sql  pgsql_api_user_get_single.sql  pgsql_api_user_multi_upsert.sql  pgsql_api_user_single_delete.sql  pgsql_api_user_single_upsert.sql  pgsql_ddl_create.sql  pgsql_ddl_init.bat
resources/static/: index.html
rest_client/: app_methods.rest  authorisation.rest  public.rest
src/: helper.rs  lib.rs  main.rs
src/extractors/: auth.rs  mod.rs  multipart.rs
src/handlers/: app_method.rs  auth.rs  mod.rs  other.rs  users.rs
src/middleware/: auth.rs  logger.rs
src/model/: app_method.rs  mod.rs  users.rs
tests/: integration.rs
