[package]
name = "cdg_portal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2.1" }
actix-files = { version = "0.6.2" }
actix-multipart = { version = "0.5.0" }
tokio = { version = "1.20.1", features = [ "rt", "time", "net" ] }
futures = { version = "0.3.25" }
futures-util = { version = "0.3.25" }
dotenv = { version = "0.15.0" }
jwt = { package = "jsonwebtokens", version = "1.2.0" }
serde = { version = "1.0.138", features = [ "derive" ] }
serde_json = { version = "1.0.82" }
serde_urlencoded = { version = "0.7.1" }
data-encoding = { version = "2.3.3" }
openssl = { version = "0.10.45" }
uuid = { version = "1.2.2", features = [ "v4", "serde" ] }
chrono = { version = "0.4.23", features = [ "serde" ] }
utils = { git = "https://github.com/CataMark/rs_utils", branch = "master", default-features = false, features = [ "logger", "rsakeys", "mailer" ] }
dbpool = { git = "https://github.com/CataMark/rs_dbpool", branch = "master" }
regex = { version = "1.7.0" }
tokio-postgres = { version = "0.7.7", features = [ "runtime", "with-chrono-0_4", "with-uuid-1", "with-serde_json-1" ] }
postgres-types = { version = "0.2.4", features = [ "derive", "with-chrono-0_4", "with-uuid-1", "with-serde_json-1" ] }
flexi_logger = { version = "0.24.2", features = [ "async" ] }
log = { version = "0.4.17" }
time = { version = "0.3.17" }
lettre = { version = "0.10.0" }